--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,15 @@ bld/
 [Oo]bj/
 [Ll]og/
 
+# NuGet packages
+.nuget/
+
 # Visual Studio 2015 cache/options directory
 .vs/
+
+# Roslyn Compiler engine to store temporary files.
+*.sln.ide
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
